src/main/java/com/example/demo/__core/errors/except/Ex401.java
package com.example.demo.__core.errors.except;

public class Ex401 extends RuntimeException{
	public Ex401(String msg) {
		super(msg);
	}
}

